--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 /.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
+   11: /db/*.sqlite3
+   12: /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
 /log/*
