--- a/config/database.yml
+++ b/config/database.yml
@@ -4,15 +4,15 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: budding-slyly-3679
+  adapter: sqlite3
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: budding-slyly-3679
+  adapter: sqlite3
+  database: db/development.sqlite3
 
 production:
   <<: *default
